# thenews-linux

./: .gitignore  README.md
.github/workflows/: build-thenews.yml  build.yml
src/: CMakeLists.txt  main.cpp  resources.qrc
src/pages/: page1.ui  page2.ui
